# plainframework

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md
applications/: mk_tags
applications/center/: CMakeLists.txt  README.md
applications/center/include/: main.h
applications/center/scripts/: center.vc9.sln  center.vc9.vcproj
applications/center/src/: CMakeLists.txt  main.cc
applications/center/src/engine/: system.cc
applications/center/src/message/handler/servercenter/: script_execute.cc
applications/center/src/message/handler/serverserver/: connect.cc
applications/center/src/script/lua/: export.cc  net.cc
applications/commmon/src/: setting.cc
applications/common/src/: setting.cc
applications/gateway/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
applications/gateway/include/: gateway.h
applications/gateway/scripts/: gateway.vc9.sln  gateway.vc9.vcproj  gateway_vc9.sln  gateway_vc9.vcproj
applications/gateway/src/: CMakeCache.txt  CMakeLists.txt  CMakeLists1.txt  Makefile  cmake_install.cmake  gateway.cc
applications/gateway/src/engine/: system.cc
applications/gateway/src/message/delegator/: account.cc
applications/gateway/src/message/handler/gateway_tologin/: resultauth.cc
applications/gateway/src/message/handler/login_togateway/: askauth.cc  playerleave.cc  playeronline.cc
applications/gateway/src/message/handler/serverserver/: connect.cc
applications/login/: CMakeLists.txt
applications/login/include/: main.h
applications/login/scripts/: login.vc9.sln  login.vc9.vcproj
applications/login/src/: CMakeLists.txt  main.cc
applications/login/src/character/: setting.cc
applications/login/src/connection/: login.cc
applications/login/src/connection/counter/: center.cc
applications/login/src/connection/manager/: incoming.cc  login.cc  server.cc
applications/login/src/connection/queue/: center.cc  turn.cc
applications/login/src/db/: character.cc
applications/login/src/engine/: system.cc
applications/login/src/engine/thread/net/: incoming.cc  login.cc  server.cc
applications/login/src/message/handler/client_tologin/: asklogin.cc
applications/login/src/message/handler/gateway_tologin/: resultauth.cc
applications/login/src/message/handler/login_tocenter/: require_playerlogin.cc
applications/login/src/message/handler/login_toclient/: resultlogin.cc  turnstatus.cc
applications/login/src/message/handler/login_togateway/: askauth.cc  playerleave.cc  playeronline.cc
applications/login/src/message/handler/serverserver/: connect.cc
applications/pf_simple/: mk_tags  pf_simple.pproject
applications/pf_simple/include/: _config.h  main.h  net.h  passgen.h
applications/pf_simple/proj.linux/: CMakeLists.txt
applications/pf_simple/proj.win/: pf_simple.rc  pf_simple.vcxproj  pf_simple.vcxproj.filters
applications/pf_simple/scripts/: pf_simple.vc9.vcproj
applications/pf_simple/src/: CMakeLists.txt  main.cc  net.cc
applications/pf_simple/src/packet/: helloworld.cc  sayhello.cc
applications/sharememory/: CMakeLists.txt  struct.cc
applications/sharememory/scripts/: sharememory.vc9.sln  sharememory.vc9.vcproj
applications/sharememory/src/: CMakeLists.txt  main.cc
applications/sharememory/src/archive/: nodelogic_manager.cc  nodelogics.cc
applications/sharememory/src/archive/data/: globaldata.cc  interface.cc
applications/sharememory/src/archive/node/: logicmanager.cc
applications/sharememory/src/archive/node/logics/: globaldata.cc
applications/sharememory/src/engine/: system.cc
documentation/: index.htm
documentation/docs/: actions.htm  base.global.htm  base.macro.htm  base.string.htm  base.timemanager.htm  columns.htm  configuration.htm  contributing.htm  field-type-bool.htm  field-type-color.htm  field-type-date.htm  field-type-datetime.htm  field-type-enum.htm  field-type-file.htm  field-type-image.htm  field-type-key.htm  field-type-markdown.htm  field-type-number.htm  field-type-password.htm  field-type-relationship.htm  field-type-text.htm  field-type-textarea.htm  field-type-time.htm  field-type-wysiwyg.htm  fields.htm  file.api.htm  hairstyle.txt  installation.htm  introduction.htm  license.htm  localization.htm  model-configuration.htm  net.manager.htm  relationship-columns.htm  settings-configuration.htm  simpletutorials.htm  style-guide.htm  tutorials.htm  validation.htm
documentation/material/: Developer Documentation Note.docx  ProjcetManager.txt
documentation/material/architecture/: Directory structure.docx  Heavyweight server model.docx  Inter-service logic idea.docx  Lightweight server model.docx  Server model.vsdx
pf/core/: pf_core.pproject  replace.sh
pf/core/include/: pf.h
pf/core/proj.linux/: CMakeLists.txt
pf/core/scripts/: pf_core.vc9.vcproj
pf/core/src/: CMakeLists.txt  CMakeLists32.txt  CMakeLists64.txt
pf/core/src/base/: io.cc  (+6 more)
pf/dependencies/iconv/: CMakeLists.txt
pf/dependencies/iconv/proj.linux/: CMakeLists.txt
pf/dependencies/lib/: README.md
pf/dependencies/lua/: CMakeLists.txt
pf/dependencies/zlib/: CMakeLists.txt
pf/plugin/ai/: CMakeLists.txt  REAEME.md  mk_tags  plugin_ai.pproject
pf/plugin/ai/proj.linux/: CMakeLists.txt
pf/plugin/logic/: CMakeLists.txt  mk_tags  plugin_logic.pproject
pf/plugin/logic/src/: CMakeLists.txt  manager.cc
pf/plugin/lua/: pf_plugin_lua.pproject
pf/plugin/lua/proj.linux/: CMakeLists.txt
pf/plugin/pak/: README.md  generate_pak.sh
pf/plugin/pak/src/: CMakeLists.txt  Compress.cpp  Util.cpp  compress.cc  convert.sh  encrypt.cc  file.cc  interface.cc  kpmEncrypt.cpp  kpmLib.cpp  kpmLinux.cpp  kpmListFile.cpp  listfile.cc  test.cpp  util.cc
pf/plugin/scene/server/src/: CMakeLists.txt  chat_pipeline.cc  define.cc  grid.cc  map.cc  pathfinder.cc  scaner.cc  scene.cc  thread.cc  timer.cc
pf/plugin/scene/server/src/manager/: dropposition.cc  fuben.cc  net.cc  pkregion.cc  recycleconnection.cc  region.cc  scene.cc  thread.cc  timerdoing.cc  variable.cc
pf/plugin/structure/proj.linux/: CMakeLists.txt
pf/scripts/: main.cc  simple.vc9.sln  simple.vc9.vcproj  simple_vc9.sln  simple_vc9.vcproj
(+499 files in other folders)
